log
Thu Mar 26 07:14:37 PM UTC 2026: 
 list.c | 98 +++++++++++++++++-------------------------------------------------
 1 file changed, 25 insertions(+), 73 deletions(-)
 tests:  0|6
total_score: 0/60
02b98ab
Thu Mar 26 07:25:52 PM UTC 2026: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:94:43: error: dereferencing ‘void *’ pointer [-Werror]
   94 |     Node * prevEliminado = dato_eliminado -> prev;
      |                                           ^~
list.c:94:43: error: request for member ‘prev’ in something not a structure or union
list.c:95:43: error: dereferencing ‘void *’ pointer [-Werror]
   95 |     Node * nextEliminado = dato_eliminado -> next;
      |                                           ^~
list.c:95:43: error: request for member ‘next’ in something not a structure or union
list.c:95:12: error: unused variable ‘nextEliminado’ [-Werror=unused-variable]
   95 |     Node * nextEliminado = dato_eliminado -> next;
      |            ^~~~~~~~~~~~~
list.c:94:12: error: unused variable ‘prevEliminado’ [-Werror=unused-variable]
   94 |     Node * prevEliminado = dato_eliminado -> prev;
      |            ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
055841b
Thu Mar 26 07:28:03 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:94:43: error: dereferencing ‘void *’ pointer [-Werror]
   94 |     Node * prevEliminado = dato_eliminado -> prev;
      |                                           ^~
list.c:94:43: error: request for member ‘prev’ in something not a structure or union
list.c:95:43: error: dereferencing ‘void *’ pointer [-Werror]
   95 |     Node * nextEliminado = dato_eliminado -> next;
      |                                           ^~
list.c:95:43: error: request for member ‘next’ in something not a structure or union
list.c:95:12: error: unused variable ‘nextEliminado’ [-Werror=unused-variable]
   95 |     Node * nextEliminado = dato_eliminado -> next;
      |            ^~~~~~~~~~~~~
list.c:94:12: error: unused variable ‘prevEliminado’ [-Werror=unused-variable]
   94 |     Node * prevEliminado = dato_eliminado -> prev;
      |            ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
0b343bf
Thu Mar 26 07:37:05 PM UTC 2026: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:95:43: error: dereferencing ‘void *’ pointer [-Werror]
   95 |     Node * prevEliminado = dato_eliminado -> prev;
      |                                           ^~
list.c:95:43: error: request for member ‘prev’ in something not a structure or union
list.c:96:43: error: dereferencing ‘void *’ pointer [-Werror]
   96 |     Node * nextEliminado = dato_eliminado -> next;
      |                                           ^~
list.c:96:43: error: request for member ‘next’ in something not a structure or union
list.c:99:27: error: dereferencing ‘void *’ pointer [-Werror]
   99 |     return dato_eliminado -> data;
      |                           ^~
list.c:99:27: error: request for member ‘data’ in something not a structure or union
list.c:96:12: error: unused variable ‘nextEliminado’ [-Werror=unused-variable]
   96 |     Node * nextEliminado = dato_eliminado -> next;
      |            ^~~~~~~~~~~~~
list.c:95:12: error: unused variable ‘prevEliminado’ [-Werror=unused-variable]
   95 |     Node * prevEliminado = dato_eliminado -> prev;
      |            ^~~~~~~~~~~~~
list.c:100:1: error: control reaches end of non-void function [-Werror=return-type]
  100 | }
      | ^
cc1: all warnings being treated as errors
4dc1ef9
Thu Mar 26 07:47:56 PM UTC 2026: 
 list.c | 13 ++++++++++---
 1 file changed, 10 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:101:52: error: dereferencing ‘void *’ pointer [-Werror]
  101 |             prevEliminado -> next = dato_eliminado -> next;
      |                                                    ^~
list.c:101:52: error: request for member ‘next’ in something not a structure or union
list.c:106:27: error: dereferencing ‘void *’ pointer [-Werror]
  106 |     return dato_eliminado -> data;
      |                           ^~
list.c:106:27: error: request for member ‘data’ in something not a structure or union
list.c:107:1: error: control reaches end of non-void function [-Werror=return-type]
  107 | }
      | ^
cc1: all warnings being treated as errors
af4158b
Thu Mar 26 07:49:15 PM UTC 2026: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:106:27: error: dereferencing ‘void *’ pointer [-Werror]
  106 |     return dato_eliminado -> data;
      |                           ^~
list.c:106:27: error: request for member ‘data’ in something not a structure or union
list.c:107:1: error: control reaches end of non-void function [-Werror=return-type]
  107 | }
      | ^
cc1: all warnings being treated as errors
de3c792
Thu Mar 26 07:49:32 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/60
63feb7e
